/**
 * 电动车TBOX设备实时状态数据的消息定义。目前DataVehicle与终端实际上传消息的对应关系如下：
 *
 * 1、接入平台根据电动车TBOX设备上传的实时信息上报消息生成DataVehicle消息。
 *
 * 2、接入平台在每次接收到设备上传的实时信息上报消息时，将生成的DataVehicle消息保存到数据库。
 */

syntax = "proto2";

package ChargerLink.Gateway;
option java_package     = "com.chargerlink.gateway.bean.data";
option go_package       = "com.chargerlink.gateway.bean.data";
option csharp_namespace = "com.chargerlink.gateway.bean.data";
option java_multiple_files = false;

import "google/protobuf/any.proto";

/** 电动车TBOX设备实时状态数据的消息定义。*/
message DataVehicle {
	optional DataVehOverall      overall_data  = 1;                 /// (可选)整车数据。对应电动车国标'0x01整车数据'。
	repeated DataVehDrive        drive_data    = 2;                 /// (可选)驱动电机数据。对应电动车国标'0x02驱动电机数据'。
	optional DataVehBattery      baterry_data  = 3;                 /// (可选)燃料电池数据。对应电动车国标'0x03燃料电池数据'。
	optional DataVehMotor        motor_data    = 4;                 /// (可选)发动机数据。对应电动车国标'0x04发动机数据'。
	optional DataVehPos          pos_data      = 5;                 /// (可选)车辆位置数据。对应电动车国标'0x05车辆位置数据'。
	optional DataVehExtreme      extreme_data  = 6;                 /// (可选)极值数据。对应电动车国标'0x06极值数据'。
	optional DataVehAlarm        alarm_data    = 7;                 /// (可选)报警数据。对应电动车国标'0x07报警数据'。
	repeated DataVehBmsVol       bms_vol_data  = 8;                 /// (可选)可充电储能装置电压数据。对应电动车国标'0x08可充电储能装置电压数据'。
	repeated DataVehBmsTemp      bms_temp_data = 9;                 /// (可选)可充电储能装置温度数据。对应电动车国标'0x09可充电储能装置温度数据'。
	optional google.protobuf.Any extend_data   = 100;               /// (可选)车辆扩展数据的数组。
}

/** 整车数据的消息定义。对应电动车国标'0x01整车数据'。*/
message DataVehOverall {
	required uint32 power_status    = 1;                            /// (必填，国标字段)车辆状态。0x01：启动状态，0x02：熄火状态，0x03：其他状态，0xFE：异常，0xFF：无效。
	required uint32 charge_status   = 2;                            /// (必填，国标字段)充电状态。0x01：停车充电，0x02：行驶充电，0x03：未充电状态，0x04：充电完成，0xFE：异常，0xFF：无效。
	required uint32 fuel_status     = 3;                            /// (必填，国标字段)动力运行模式。0x01: 纯电，0x02：混动，0x03：燃油，0xFE：异常，0xFF：无效。
	required uint32 current_speed   = 4;                            /// (必填，国标字段)当前里程表车速。单位：0.1km/h，范围：0.0km/h～220.0km/h，0xFFFE：异常，0xFFFF：无效。
	required uint32 current_mileage = 5;                            /// (必填，国标字段)当前里程表读数。单位：0.1km，范围：0.0km～999999.9km，0xFFFFFFFE：异常，0xFFFFFFFF：无效。
	required uint32 total_voltage   = 6;                            /// (必填，国标字段)总电压。单位：0.1V，范围：0.0V～1000.0V，0xFFFE：异常，0xFFFF：无效。
	required uint32 total_current   = 7;                            /// (必填，国标字段)总电流。单位：0.1A，偏移：-1000.0A，范围：-1000.0A～1000.0A，0xFFFE：异常，0xFFFF：无效。
	required uint32 soc_status      = 8;                            /// (必填，国标字段)SOC状态。单位：1%，范围：0%～100%，0xFE：异常，0xFF：无效。
	required uint32 dc_status       = 9;                            /// (必填，国标字段)DC-DC状态。0x01：工作，0x02：断开，0xFE：异常，0xFF：无效。
	required uint32 gear_status     = 10;                           /// (必填，国标字段)档位状态。Bit5：1-驱动有效/0-驱动无效，Bit4：1-制动有效/0-制动无效，Bit0～3：0-空挡/1～12-1档～12档/13-倒车挡/14-自动D档/15-停车P档，0xFE：异常，0xFF：无效。
	required uint32 resistance      = 11;                           /// (必填，国标字段)绝缘电阻值。单位：1kΩ，范围：0kΩ～60000kΩ，0xFFFE：异常，0xFFFF：无效。
	required uint32 power_value     = 12;                           /// (必填，国标字段)牵引踏板信号。单位：1%，范围：0%～100%，0xFE：异常，0xFF：无效。
	required uint32 brake_value     = 13;                           /// (必填，国标字段)制动踏板信号。单位：1%，范围：0%～100%，0xFE：异常，0xFF：无效。
}

/** 驱动电机数据的消息定义。对应电动车国标'0x02驱动电机数据'。*/
message DataVehDrive {
	required uint32 index        = 1;                               /// (必填，国标字段)驱动电机序号。范围：1～253。
	required uint32 drive_status = 2;                               /// (必填，国标字段)驱动电机状态。0x01：耗电状态，0x02：发电状态，0x03：关闭状态，0x04：准备状态，0xFE：异常，0xFF：无效。
	required uint32 ctrler_temp  = 3;                               /// (必填，国标字段)驱动电机控制器温度。单位：1°C，偏移：-40°C，范围：-40°C～210°C，0xFE：异常，0xFF：无效。
	required uint32 drive_speed  = 4;                               /// (必填，国标字段)驱动电机转速。单位：1rpm，偏移：-2000rpm，范围：-2000rpm～45531rpm，0xFFFE：异常，0xFFFF：无效。
	required uint32 drive_torque = 5;                               /// (必填，国标字段)驱动电机转矩。单位：0.1N*m，偏移：-2000.0rpm，范围：-2000.0N*m～4553.1N*m，0xFFFE：异常，0xFFFF：无效。
	required uint32 drive_temp   = 6;                               /// (必填，国标字段)驱动电机温度。单位：1°C，偏移：-40°C，范围：-40°C～210°C，0xFE：异常，0xFF：无效。
	required uint32 bus_voltage  = 7;                               /// (必填，国标字段)电机输入电压。单位：0.1V，范围：0.0V～6000.0V，0xFFFE：异常，0xFFFF：无效。
	required uint32 bus_current  = 8;                               /// (必填，国标字段)电机母线电流。单位：0.1A，偏移：-1000.0A，范围：-1000.0A～1000.0A，0xFFFE：异常，0xF
}

/** 燃料电池数据的消息定义。对应电动车国标'0x03燃料电池数据'。*/
message DataVehBattery {
	required uint32 total_voltage = 1;                              /// (必填，国标字段)燃料电池电压。单位：0.1V，范围：0.0V～6000.0V，0xFFFE：异常，0xFFFF：无效。
	required uint32 total_current = 2;                              /// (必填，国标字段)燃料电池电流。单位：0.1A，范围：0.0A～2000.0A，0xFFFE：异常，0xFFFF：无效。
	required uint32 consume_rate  = 3;                              /// (必填，国标字段)燃料消耗率。单位：0.01kg/100km，范围：0.00kg/100km～600.00kg/100km，0xFFFE：异常，0xFFFF：无效。
	repeated uint32 temp_list     = 4;                              /// (必填，国标字段)燃料电池温度探针温度值列表。单位：1°C，偏移：-40°C，范围：-40°C～200°C，0xFE：异常，0xFF：无效。
	required uint32 max_temp_val  = 5;                              /// (必填，国标字段)氢系统中最高温度。单位：0.1°C，偏移：-40.0°C，范围：-40.0°C～200.0°C，0xFFFE：异常，0xFFFF：无效。
	required uint32 max_temp_idx  = 6;                              /// (必填，国标字段)氢系统中最高温度探针编号。范围：1～252，0xFE：异常，0xFF：无效。
	required uint32 max_dense_val = 7;                              /// (必填，国标字段)氢系统中最高浓度。单位：1mg/kg，范围：0mg/kg～50000mg/kg，0xFFFE：异常，0xFFFF：无效。
	required uint32 max_dense_idx = 8;                              /// (必填，国标字段)氢系统中最高浓度探针编号。范围：1～252，0xFE：异常，0xFF：无效。
	required uint32 max_press_val = 9;                              /// (必填，国标字段)氢系统中最高压力。单位：0.1MPa，范围：0.0MPa～100.0MPa，0xFFFE：异常，0xFFFF：无效。
	required uint32 max_press_idx = 10;                             /// (必填，国标字段)氢系统中最高压力探针编号。范围：1～252，0xFE：异常，0xFF：无效。
	required uint32 high_vol_dc   = 11;                             /// (必填，国标字段)高压DC/DC状态。0x01：工作，0x02：断开，0xFE：异常，0xFF：无效。
}

/** 发动机数据的消息定义。对应电动车国标'0x04发动机数据'。*/
message DataVehMotor {
	required uint32 motor_status = 1;                               /// (必填，国标字段)发动机状态。0x01：启动状态，0x02：关闭状态，0xFE：异常，0xFF：无效。
	required uint32 motor_speed  = 2;                               /// (必填，国标字段)发动机曲轴转速。单位：1rpm，范围：0rpm～60000rpm，0xFFFE：异常，0xFFFF：无效。
	required uint32 consume_rate = 3;                               /// (必填，国标字段)燃料消耗率。单位：0.01L/100km，范围：0.00L/100km～600.00L/100km，0xFFFE：异常，0xFFFF：无效。
}

/** 车辆位置数据的消息定义。对应电动车国标'0x05车辆位置数据'。*/
message DataVehPos {
	required uint32    pos_type      = 1;                           /// (必填)定位类型。0：未定位，1：GPS二维定位，2：GPS三维定位，3：LBS基站定位，4：WIFI定位。
	optional uint32    gps_count     = 2;                           /// (定位类型位GPS时必填)可见卫星总数。0-12，越多越好。
	optional float     pdop          = 3;                           /// (定位类型位GPS时必填)PDOP位置精度因子。0.5-99.9，越小精度越高。
	optional double    latitude      = 4;                           /// (定位类型位GPS时必填)纬度数据。ddd.ddddd格式，负数：南纬，正数：北纬。
	optional double    longitude     = 5;                           /// (定位类型位GPS时必填)经度数据。ddd.ddddd格式，负数：西经，正数：东经。
	optional uint32    height        = 6;                           /// (定位类型位GPS时必填)海拔高度。单位：米。
	optional uint32    speed         = 7;                           /// (定位类型位GPS时必填)地面速率。单位：米/秒。
	optional uint32    direction     = 8;                           /// (定位类型位GPS时必填)方向角度。单位：度，0-360°。
	map<int64, int32>  lbs_cell_list = 9;                           /// (定位类型位LBS时必填)LBS小区基站信号强度列表。格式为：小区基站ID->基站信号强度，LBS小区基站ID的格式为：MCC(3位)+MNC(2位)+LAC(5位)+CID(5位)的15位数字。
	repeated int64     wifi_mac_list = 10;                          /// (定位类型位WIFI时必填)WIFI热点的MAC地址列表。格式为：将MAC地址转换成8字节长整数，例如：12:34:56:78:90:AB为0x1234567890ab
}

/** 极值数据的消息定义。对应电动车国标'0x06极值数据'。*/
message DataVehExtreme {
	required uint32 max_vol_idx  = 1;                               /// (必填，国标字段)最高电压电池子系统号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 max_vol_pos  = 2;                               /// (必填，国标字段)最高电压电池单体代号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 max_vol_val  = 3;                               /// (必填，国标字段)电池单体电压最高值。单位：0.001V，范围：0.000V～15.000V，0xFFFE：异常，0xFFFF：无效。
	required uint32 min_vol_idx  = 4;                               /// (必填，国标字段)最低电压电池子系统号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 min_vol_pos  = 5;                               /// (必填，国标字段)最低电压电池单体代号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 min_vol_val  = 6;                               /// (必填，国标字段)电池单体电压最低值。单位：0.001V，范围：0.000V～15.000V，0xFFFE：异常，0xFFFF：无效。
	required uint32 max_temp_idx = 7;                               /// (必填，国标字段)最高温度子系统号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 max_temp_pos = 8;                               /// (必填，国标字段)最高温度探针序号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 max_temp_val = 9;                               /// (必填，国标字段)最高温度值。单位：1°C，偏移：-40°C，范围：-40A～210A，0xFE：异常，0xFF：无效。
	required uint32 min_temp_idx = 10;                              /// (必填，国标字段)最低温度子系统号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 min_temp_pos = 11;                              /// (必填，国标字段)最低温度探针序号。范围：1～250，0xFE：异常，0xFF：无效。
	required uint32 min_temp_val = 12;                              /// (必填，国标字段)最低温度值。单位：1°C，偏移：-40°C，范围：-40A～210A，0xFE：异常，0xFF：无效。
}

/** 报警数据的消息定义。对应电动车国标'0x07报警数据'。*/
message DataVehAlarm {
	required uint32 alarm_level    = 1;                             /// (必填，国标字段)最高报警等级。0：表示无故障，1：表示1级故障，指代不影响车辆正常行驶的故障，2：表示2级故障，指影响车辆性能需驾驶员限制行驶的故障，3：表示3级故障，为最高级别故障，指代驾驶员应立即停车处理或请求救援的故障，0xFE：异常，0xFF：无效。
	required int32  alarm_flag     = 2;                             /// (必填，国标字段)通用报警标志。具体含义见电动车国标协议中实时信息上报消息的'通用报警标志'。
	repeated int32  bms_err_list   = 3;                             /// (必填，国标字段)可充电储能装置代码列表。
	repeated int32  drive_err_list = 4;                             /// (必填，国标字段)驱动电机故障代码列表。
	repeated int32  motor_err_list = 5;                             /// (必填，国标字段)发动机故障代码列表。
	repeated int32  other_err_list = 6;                             /// (必填，国标字段)其他故障代码列表。
}

/** 可充电储能装置电压数据的消息定义。对应电动车国标'0x08可充电储能装置电压数据'。*/
message DataVehBmsVol {
	required uint32 index    = 1;                                   /// (必填，国标字段)可充电储能装置子系统号。
	required uint32 voltage  = 2;                                   /// (必填，国标字段)可充电储能装置子系统电压。单位：0.1V，范围：0.0V～6000.0V，0xFFFE：异常，0xFFFF：无效。
	required uint32 current  = 3;                                   /// (必填，国标字段)可充电储能装置子系统电流。单位：0.1A，偏移：-1000.0A，范围：-1000.0A～1000.0A，0xFFFE：异常，0xFFFF：无效。
	repeated uint32 vol_list = 4;                                   /// (必填，国标字段)单体电池电压列表。单位：0.001V，范围：0.000V～60.000V，0xFFFE：异常，0xFFFF：无效。
}

/** 可充电储能装置温度数据的消息定义。对应电动车国标'0x09可充电储能装置温度数据'。*/
message DataVehBmsTemp {
	required uint32 index     = 1;                                  /// (必填，国标字段)可充电储能装置子系统号。
	repeated uint32 temp_list = 2;                                  /// (必填，国标字段)单体电池温度探针温度值列表。单位：1°C，偏移：-40°C，范围：-40°C～210°C，0xFE：异常，0xFF：无效。
}
